# CSI3131-Summer-2022-Assignment

./: .gitignore
1/: cpr.c
2/: CMakeLists.txt  README.md
2/include/: Q1.h  Q2.h
2/src/: Q1.c  Q2.c  main.c
3/: CMakeLists.txt  README.md
3/src/: main.cpp
3/src/entities/: Student.cpp  Student.hpp  TeachingAssistant.cpp  TeachingAssistant.hpp  World.cpp  World.hpp
3/src/utils/: SynchronizedOutputStream.cpp  SynchronizedOutputStream.hpp  ThreadSafeQueue.cpp  ThreadSafeQueue.hpp
4/: CMakeLists.txt  README.md
4/src/: Q1.md  main.c
4/src/Q2/: AbstractAlgorithm.cpp  AbstractAlgorithm.hpp  FIFOAlgorithm.cpp  FIFOAlgorithm.hpp  LRUAlgorithm.cpp  LRUAlgorithm.hpp  Page.cpp  Page.hpp  PageReferenceString.cpp  PageReferenceString.hpp  Q2.cpp  Q2.h
4/src/Q3/: CatalanNumber.c  CatalanNumber.h  Q3.c  Q3.h  SharedMemory.c  SharedMemory.h
